logs/watchdog_20251012_1430.log
[12/10/2025 14:30:01,63] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[12/10/2025 14:30:01,86] END WATCHDOG 
